# advent-of-code

./: .gitignore
2024/: CMakeLists.txt  data
2024/src/: main.cpp  p01.cpp  p02.cpp  p03.cpp  p04.cpp  p05.cpp  p06.cpp  p07.cpp  p08.cpp  p09.cpp  p10.cpp  p11.cpp  p12.cpp  p13.cpp  p14.cpp  p15.cpp  p16.cpp  p17.cpp  p18.cpp  p19.cpp  p20.cpp  p21.cpp  p22.cpp  p23.cpp  p23.py  p24.cpp  p25.cpp
2025/: CMakeLists.txt  data
2025/src/: main.cpp  p01.cpp  p02.cpp  p03.cpp  p04.cpp  p05.cpp  p06.cpp  p07.cpp  p08.cpp
